--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ install:
  - pip3 install flask flask-sqlalchemy flask-mail pymysql
 
 notifications:
-  slack:
+  slack: nyusher:RUfahaddlRibB9m9YR8NGFmp
     on_success: always
+    on_failure: always
+
   email:
     on_failure: always
 
